mixin priorities, best practices, add mixin extras

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,6 @@ loader_version=0.14.11
 mod_version = 1.0.1
 maven_group = net.chatwalk
 archives_base_name = chatwalk
+
+# Dependencies
+mixinextras_version=0.1.1
